<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/dup_0x7f0b034c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dup_0x7f13006d"
        android:singleLine="true"/>
    <EditText
        android:id="@+id/dup_0x7f0b034b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dup_0x7f07005d"
        android:hint="@string/dup_0x7f130066"
        android:singleLine="true"
        android:selectAllOnFocus="true"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"/>
    <EditText
        android:id="@+id/dup_0x7f0b0348"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dup_0x7f07005d"
        android:hint="@string/dup_0x7f13003c"
        android:singleLine="true"
        android:selectAllOnFocus="true"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"/>
    <EditText
        android:id="@+id/dup_0x7f0b0349"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dup_0x7f07005d"
        android:hint="@string/dup_0x7f13003e"
        android:singleLine="true"
        android:inputType="text"/>
    <EditText
        android:id="@+id/dup_0x7f0b034a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dup_0x7f07005d"
        android:hint="@string/dup_0x7f13005d"
        android:singleLine="true"
        android:inputType="textPersonName"/>
    <Button
        android:id="@+id/dup_0x7f0b0106"
        android:layout_marginTop="@dimen/dup_0x7f07005d"
        android:text="@string/dup_0x7f13003d"
        style="@style/dup_0x7f140167"/>
</LinearLayout>
