<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.button.MaterialButtonToggleGroup xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/dup_0x7f0b026d"
    android:visibility="gone"
    android:layout_width="@dimen/dup_0x7f07036f"
    android:layout_height="@dimen/dup_0x7f07036c"
    android:contentDescription="@string/dup_0x7f130114"
    app:dup_0x7f0400e4="@+id/dup_0x7f0b026b"
    app:dup_0x7f0404fd="true"
    app:dup_0x7f04052f="true">
    <com.google.android.material.button.MaterialButton
        android:id="@+id/dup_0x7f0b026b"
        android:layout_width="wrap_content"
        android:text="@string/dup_0x7f130122"
        android:insetTop="8dp"
        style="?attr/dup_0x7f0403b9"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/dup_0x7f0b026c"
        android:layout_width="wrap_content"
        android:text="@string/dup_0x7f130126"
        android:insetBottom="8dp"
        style="?attr/dup_0x7f0403b9"/>
</com.google.android.material.button.MaterialButtonToggleGroup>
