<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:id="@+id/dup_0x7f0b032d"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?android:attr/textColorPrimary"
        android:gravity="center_vertical"
        android:id="@+id/dup_0x7f0b032c"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="2dp"
        android:drawablePadding="0dp"/>
    <ImageView
        android:layout_gravity="center_vertical"
        android:id="@+id/dup_0x7f0b032e"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/dup_0x7f130015"
        style="?attr/dup_0x7f04000d"/>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/dup_0x7f0b0330"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:layoutDirection="locale">
        <ImageView
            android:layout_gravity="center_vertical"
            android:id="@+id/dup_0x7f0b0332"
            android:visibility="gone"
            android:layout_width="@dimen/dup_0x7f070029"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            style="@style/dup_0x7f1401ab"/>
        <LinearLayout
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@+id/dup_0x7f0b0334"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <view
                android:ellipsize="end"
                android:layout_gravity="center_vertical"
                android:id="@+id/dup_0x7f0b0335"
                android:background="@null"
                android:paddingLeft="@dimen/dup_0x7f07002a"
                android:paddingRight="@dimen/dup_0x7f07002b"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:singleLine="true"
                android:layout_weight="1"
                android:inputType="textNoSuggestions"
                android:dropDownAnchor="@+id/dup_0x7f0b0330"
                android:imeOptions="actionSearch"
                android:dropDownHeight="wrap_content"
                android:dropDownHorizontalOffset="0dp"
                android:dropDownVerticalOffset="0dp"
                class="androidx.appcompat.widget.SearchView$SearchAutoComplete"/>
            <ImageView
                android:layout_gravity="center_vertical"
                android:id="@+id/dup_0x7f0b032f"
                android:background="?attr/dup_0x7f0404fa"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/dup_0x7f130013"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/dup_0x7f0b0371"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:layout_gravity="center_vertical"
                android:id="@+id/dup_0x7f0b0331"
                android:background="?attr/dup_0x7f0404fa"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:focusable="true"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/dup_0x7f130016"/>
            <ImageView
                android:layout_gravity="center_vertical"
                android:id="@+id/dup_0x7f0b0336"
                android:background="?attr/dup_0x7f0404fa"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:focusable="true"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/dup_0x7f130017"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
